api: swagger bugfix
